--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="en">
 <head>
 
+<!-- ico / favicon-->
 <link type="image/x-icon" href="../crimsonx_32x32.ico" rel="shortcut icon" />
 	
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- ลบลิงก์ Google Fonts "Orbitron" และ "Lato" ที่ไม่ได้ใช้งานออก -->
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="font.css">
-	<!--Font Chakra Petch / Kanit -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-	
     <title>Digital Clock by Crimson X</title>
 
 </head>
