--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 
 <!-- ico / favicon-->
-<link type="image/x-icon" href="../crimsonx_32x32.ico" rel="shortcut icon" />
+<link type="image/x-icon" href="crimsonx_32x32.ico" rel="shortcut icon" />
 	
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- ลบลิงก์ Google Fonts "Orbitron" และ "Lato" ที่ไม่ได้ใช้งานออก -->
+
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="font.css">
     <title>Digital Clock by Crimson X</title>
